--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -184,7 +184,10 @@ ul#nav li a {
 }
 
 ul#nav li a:active { background-color: transparent !important; }
-ul#nav li.current a { color: #F06000; }
+ul#nav li.current a { 
+   color: #1da1f2;
+   text-shadow: 0 0 10px #1da1f2; 
+};
 
 
 /* ------------------------------------------------------------------ */
