--- a/public/css/default.css
+++ b/public/css/default.css
@@ -596,6 +596,7 @@ input[type="checkbox"] { display: inline; }
    width: 96%;
    max-width: 1020px;
    margin: 0 auto;
+   padding: 20px;
 }
 /* fixed width for IE8 */
 .ie .row { width: 1000px ; }
