updated siteData.js to include resumeData object

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -333,48 +333,74 @@ ul#nav li.current a {
    border-radius: 3px 0 0 3px;
 }
 
-.photoshop {
-  	width: 60%;
-  	-moz-animation: photoshop 2s ease;
-  	-webkit-animation: photoshop 2s ease;
-}
-.illustrator {
-  	width: 55%;
-  	-moz-animation: illustrator 2s ease;
-  	-webkit-animation: illustrator 2s ease;
-}
-.wordpress {
-  	width: 50%;
-  	-moz-animation: wordpress 2s ease;
-  	-webkit-animation: wordpress 2s ease;
+.javascript {
+   width: 90%;
+   -moz-animation: javascript 2s ease;
+   -webkit-animation: javascript 2s ease;
 }
 .css {
-  	width: 90%;
-  	-moz-animation: css 2s ease;
-  	-webkit-animation: css 2s ease;
+   width: 90%;
+   -moz-animation: css 2s ease;
+   -webkit-animation: css 2s ease;
 }
 .html5 {
-  	width: 80%;
-  	-moz-animation: html5 2s ease;
-  	-webkit-animation: html5 2s ease;
+   width: 90%;
+   -moz-animation: html5 2s ease;
+   -webkit-animation: html5 2s ease;
 }
 .jquery {
-  	width: 50%;
-  	-moz-animation: jquery 2s ease;
-  	-webkit-animation: jquery 2s ease;
+   width: 75%;
+   -moz-animation: jquery 2s ease;
+   -webkit-animation: jquery 2s ease;
+}
+.react {
+  	width: 65%;
+  	-moz-animation: react 2s ease;
+  	-webkit-animation: react 2s ease;
+}
+.rails {
+  	width: 75%;
+  	-moz-animation: rails 2s ease;
+  	-webkit-animation: rails 2s ease;
+}
+.git {
+   width: 70%;
+   -moz-animation: git 2s ease;
+   -webkit-animation: git 2s ease;
+}
+.nosql {
+   width: 60%;
+   -moz-animation: nosql 2s ease;
+   -webkit-animation: nosql 2s ease;
+}
+.postgres {
+   width: 60%;
+   -moz-animation: postgres 2s ease;
+   -webkit-animation: postgres 2s ease;
+}
+.express {
+   width: 75%;
+   -moz-animation: express 2s ease;
+   -webkit-animation: express 2s ease;
+}
+.mongo {
+   width: 65%;
+   -moz-animation: mongo 2s ease;
+   -webkit-animation: mongo 2s ease;
 }
 
-@-moz-keyframes photoshop {
+
+@-moz-keyframes javascript {
   0%   { width: 0px;  }
-  100% { width: 60%;  }
+  100% { width: 90%;  }
 }
-@-moz-keyframes illustrator {
+@-moz-keyframes react {
   0%   { width: 0px;  }
-  100% { width: 55%;  }
+  100% { width: 65%;  }
 }
-@-moz-keyframes wordpress {
+@-moz-keyframes rails {
   0%   { width: 0px;  }
-  100% { width: 50%;  }
+  100% { width: 75%;  }
 }
 @-moz-keyframes css {
   0%   { width: 0px;  }
@@ -382,24 +408,44 @@ ul#nav li.current a {
 }
 @-moz-keyframes html5 {
   0%   { width: 0px;  }
-  100% { width: 80%;  }
+  100% { width: 90%;  }
 }
 @-moz-keyframes jquery {
   0%   { width: 0px;  }
-  100% { width: 50%;  }
+  100% { width: 75%;  }
+}
+@-moz-keyframes git {
+   0%   { width: 0px;  }
+   100% { width: 70%;  }
+}
+@-moz-keyframes nosql {
+   0%   { width: 0px;  }
+   100% { width: 60%;  }
+}
+@-moz-keyframes postgres {
+   0%   { width: 0px;  }
+   100% { width: 60%;  }
+}
+@-moz-keyframes express {
+   0%   { width: 0px;  }
+   100% { width: 75%;  }
+}
+@-moz-keyframes mongo {
+   0%   { width: 0px;  }
+   100% { width: 65%;  }
 }
 
-@-webkit-keyframes photoshop {
+@-webkit-keyframes javascript {
   0%   { width: 0px;  }
-  100% { width: 60%;  }
+  100% { width: 90%;  }
 }
-@-webkit-keyframes illustrator {
+@-webkit-keyframes react {
   0%   { width: 0px;  }
-  100% { width: 55%;  }
+  100% { width: 65%;  }
 }
-@-webkit-keyframes wordpress {
+@-webkit-keyframes rails {
   0%   { width: 0px;  }
-  100% { width: 50%;  }
+  100% { width: 75%;  }
 }
 @-webkit-keyframes css {
   0%   { width: 0px;  }
@@ -407,11 +453,31 @@ ul#nav li.current a {
 }
 @-webkit-keyframes html5 {
   0%   { width: 0px;  }
-  100% { width: 80%;  }
+  100% { width: 90%;  }
 }
 @-webkit-keyframes jquery {
   0%   { width: 0px;  }
-  100% { width: 50%;  }
+  100% { width: 75%;  }
+}
+@-webkit-keyframes git {
+   0%   { width: 0px;  }
+   100% { width: 70%;  }
+}
+@-webkit-keyframes nosql {
+   0%   { width: 0px;  }
+   100% { width: 60%;  }
+}
+@-webkit-keyframes postgres {
+   0%   { width: 0px;  }
+   100% { width: 60%;  }
+}
+@-webkit-keyframes express {
+   0%   { width: 0px;  }
+   100% { width: 75%;  }
+}
+@-webkit-keyframes mongo {
+   0%   { width: 0px;  }
+   100% { width: 65%;  }
 }
 
 /* ------------------------------------------------------------------ */
