--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -561,7 +561,7 @@ ul#nav li.current a {
 }
 .portfolio-item .item-wrap img {
    vertical-align: bottom;
-   width: 375px;
+   width: 100%;
    height: 250px;
    border-radius: 1rem;
 }
@@ -608,7 +608,7 @@ ul#nav li.current a {
 }
 .popup-modal .description-box .categories {
    font: 11px/21px 'opensans-light', sans-serif;
-   color: #A1A1A1;
+   color: #000;
    text-transform: uppercase;
    letter-spacing: 2px;
    display: block;
