--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -590,7 +590,7 @@ ul#nav li.current a {
 
 /* popup modal */
 .popup-modal {
-	max-width: 550px;
+	max-width: 60%;
 	background: #fff;
 	position: relative;
 	margin: 0 auto;
