--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -100,7 +100,7 @@ header .social li {
    padding: 0;
 }
 header .social li a { color: #fff; }
-header .social li a:hover { color: #11ABB0; }
+header .social li a:hover { color: #1da1f2; }
 
 /* scrolldown link */
 header .scrolldown a {
@@ -122,7 +122,7 @@ header .scrolldown a {
    -o-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;
 }
-header .scrolldown a:hover { color: #11ABB0; }
+header .scrolldown a:hover { color: #1da1f2; }
 
 /* primary navigation
 --------------------------------------------------------------------- */
@@ -202,7 +202,7 @@ ul#nav li.current a {
 }
 
 #about a, #about a:visited  { color: #fff; }
-#about a:hover, #about a:focus { color: #11ABB0; }
+#about a:hover, #about a:focus { color: #1da1f2; }
 
 #about h2 {
    font: 22px/30px 'opensans-bold', sans-serif;
@@ -250,7 +250,7 @@ ul#nav li.current a {
    overflow: hidden;
 }
 
-#resume a, #resume a:visited  { color: #11ABB0; }
+#resume a, #resume a:visited  { color: #1da1f2; }
 #resume a:hover, #resume a:focus { color: #313131; }
 
 #resume h1 {
@@ -259,7 +259,7 @@ ul#nav li.current a {
    letter-spacing: 1px;
 }
 #resume h1 span {
-   border-bottom: 3px solid #11ABB0;
+   border-bottom: 3px solid #1da1f2;
    padding-bottom: 6px;
 }
 #resume h3 {
@@ -629,7 +629,10 @@ ul#nav li.current a {
    letter-spacing: 3px;
    cursor: pointer;
 }
-.popup-modal a:hover {	color: #00CCCC; }
+.popup-modal a:hover {	
+   color: #1da1f2;
+   text-shadow: 0 0 10px #1da1f2; 
+}
 .popup-modal a.popup-modal-dismiss { margin-left: 24px; }
 
 
@@ -872,7 +875,7 @@ call-to-action .button {
 }
 #contact .section-head { margin-bottom: 42px; }
 
-#contact a, #contact a:visited  { color: #11ABB0; }
+#contact a, #contact a:visited  { color: #1da1f2; }
 #contact a:hover, #contact a:focus { color: #fff; }
 
 #contact h1 {
@@ -933,7 +936,7 @@ call-to-action .button {
 #contact textarea:focus,
 #contact select:focus {
 	color: #fff;
-	background-color: #11ABB0;
+	background-color: #1da1f2;
 }
 #contact button.submit {
 	text-transform: uppercase;
@@ -952,7 +955,7 @@ call-to-action .button {
 	background: #fff;
 }
 #contact span.required {
-	color: #11ABB0;
+	color: #1da1f2;
 	font-size: 13px;
 }
 #message-warning, #message-success {
@@ -964,7 +967,7 @@ call-to-action .button {
    margin-left: 26%;
 }
 #message-warning { color: #D72828; }
-#message-success { color: #11ABB0; }
+#message-success { color: #1da1f2; }
 
 #message-warning i,
 #message-success i {
@@ -1079,5 +1082,5 @@ footer .social-links li:first-child { margin-left: 0; }
    line-height: 60px;
  	border-radius: 100%;
 }
-#go-top a:hover { background-color: #0F9095; }
+#go-top a:hover { background-color: #1da1f2; }
 
