--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -269,7 +269,7 @@ ul#nav li.current a {
 #resume .header-col { padding-top: 9px; }
 #resume .main-col { padding-right: 10%; }
 
-.education, .work {
+.education, .skill {
    margin-bottom: 48px;
    padding-bottom: 24px;
    border-bottom: 1px solid #E8E8E8;
@@ -307,7 +307,7 @@ ul#nav li.current a {
    position: relative;
   	margin-bottom: 60px;
   	background: #ccc;
-  	height: 42px;
+  	height: 3px;
   	border-radius: 3px;
 }
 .bars li em {
@@ -495,7 +495,7 @@ ul#nav li.current a {
    letter-spacing: 1px;
    text-align: center;
    margin-bottom: 48px;
-   color: #95A3A3;
+   color: #000;
 }
 
 /* Portfolio Content */
