--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -523,6 +523,7 @@ ul#nav li.current a {
    top: 0;
    width: 100%;
    height: 100%;
+   border-radius: 0.5em;
 
 	opacity: 0;
 	-moz-opacity: 0;
@@ -567,11 +568,11 @@ ul#nav li.current a {
 }
 .portfolio-item .portfolio-item-meta { padding: 18px }
 .portfolio-item .portfolio-item-meta h5 {
-   font: 14px/21px 'opensans-bold', sans-serif;
+   font: 21px 'opensans-bold', sans-serif;
    color: #fff;
 }
 .portfolio-item .portfolio-item-meta p {
-   font: 12px/18px 'opensans-light', sans-serif;
+   font: 18px 'opensans-light', sans-serif;
    color: #c6c7c7;
    margin-bottom: 0;
 }
